<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jessy.vitadata.Historial2">

    <LinearLayout
        android:id="@+id/Id_name"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Id_txt_T"
            android:layout_width="144dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/temperatura"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Id_txt_FC"
            android:layout_width="182dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/frecuencia_cardiaca"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Id_txt_OS"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/oxigeno_en_la_sangre"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Id_view"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/Id_lv_T"
            android:layout_width="206dp"
            android:layout_height="wrap_content">

        </ListView>

        <ListView
            android:id="@+id/Id_lv_FC"
            android:layout_width="247dp"
            android:layout_height="match_parent" />

        <ListView
            android:id="@+id/Id_lv_OS"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Id_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Id_btn_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Back"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
