<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jessy.vitadata.Menu">


    <ScrollView
        android:id="@+id/Id_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="27dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="68dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/logo2" />

            <Button
                android:id="@+id/btnMonitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:text="Monitoreo"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btnHistorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="58dp"
                android:text="@string/Historial" />

            <Button
                android:id="@+id/btnSalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:text="@string/Salir" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
